Add GameCard component and update game images in JSON data

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,12 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+img {
+  height: 22rem;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  margin: 0 auto;
+  display: block;
+}
