--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,29 @@ thead {
   border: 1px solid #ddd;
   border-radius: 4px;
 }
+
+/* PAGINA DETTAGLIO GIOCO */
+
+
+.game-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem; /* spazio tra i figli */
+}
+
+.game-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex: 1;
+  text-align: left;
+}
+.game-details img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  aspect-ratio: 1 / 1;
+}
