--- a/src/index.css
+++ b/src/index.css
@@ -67,11 +67,11 @@ button:focus-visible {
   }
 }
 
-img {
+/* img {
   height: 22rem;
   width: 100%;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   margin: 0 auto;
   display: block;
-}
+} */
